Correxiones del sprint3 y arreglos de detalles